fix: long message overflow bug

--- a/src/style.css
+++ b/src/style.css
@@ -107,6 +107,7 @@ input:focus {
   border-radius: 10px;
   border-top-right-radius: 0px;
   font-size: 1em;
+  word-break: break-word;
 }
 
 .message__text {
